Documentation edits made through Mintlify web editor

--- a/best-practices/backend/revenue-cat/cron-jobs.mdx
+++ b/best-practices/backend/revenue-cat/cron-jobs.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Cron Jobs"
 description: "Implement a self-healing subscription sync system using scheduled cron jobs as a backup to webhooks. This ensures your database stays synchronized with RevenueCat even when webhooks fail or are delayed."
+icon: "arrows-repeat-1"
 ---
 
 ## Why You Need Cron-Based Sync
