--- a/best-practices/backend/revenue-cat/webhooks.mdx
+++ b/best-practices/backend/revenue-cat/webhooks.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Webhooks"
 description: "Complete implementation guide for processing RevenueCat webhooks with authorization validation, event type handling, and entitlement management."
+icon: "webhook"
 ---
 
 ## Webhook Flow Diagram
