--- a/roadblocks/revenue-cat/missing-item.mdx
+++ b/roadblocks/revenue-cat/missing-item.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Missing Item"
 description: "Your paywall is empty or checkout isn't working. Products aren't loading. Here's how to debug it."
+icon: "octagon-xmark"
 ---
 
 ## What is this error?
