--- a/store-rejections/common-rejection/ai-processing.mdx
+++ b/store-rejections/common-rejection/ai-processing.mdx
@@ -1,6 +1,7 @@
 ---
 title: "AI Processing"
 description: "Your app was rejected because it processes user data with AI without proper consent. Here's how to implement Apple's required AI consent flow."
+icon: "align-left"
 ---
 
 ## What are AI processing consent rejections?
@@ -339,10 +340,3 @@ If you keep getting rejected for AI consent issues:
    - Your rejection notice in full
    - Screenshot of your consent dialog
    - Description of your AI features
-
----
-
-## Related documentation
-
-- [Storage Vault](https://setup.despia.com/lovable/native-features/storage-vault)
-- [User Agent Detection](https://setup.despia.com/lovable/native-features/user-agent)
