--- a/store-rejections/common-rejection/blank-screen-redirects.mdx
+++ b/store-rejections/common-rejection/blank-screen-redirects.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Blank Screen Redirects"
 description: "Your app was rejected because it shows a blank or white screen during authentication. Here's how to fix it."
+icon: "align-left"
 ---
 
 ## What are blank screen redirect rejections?
@@ -549,12 +550,3 @@ If you keep getting rejected for blank screens:
    - Screen recording of your login flow
    - Your rejection notice in full
    - URLs of your callback pages
-
----
-
-## Related documentation
-
-- [Google Auth](https://setup.despia.com/lovable/native-features/oauth/google)
-- [Social Login Rejections](https://setup.despia.com/roadblocks/app-review/social-login)
-- [User Agent Detection](https://setup.despia.com/lovable/native-features/user-agent)
-- [Apple JS SDK Documentation](https://developer.apple.com/documentation/sign_in_with_apple/sign_in_with_apple_js)
