--- a/store-rejections/common-rejection/deceptive-paywalls.mdx
+++ b/store-rejections/common-rejection/deceptive-paywalls.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Deceptive Paywalls"
 description: "Your app was rejected because the paywall is misleading or uses dark patterns. Here's what reviewers flagged and how to fix it."
+icon: "align-left"
 ---
 
 ## What are deceptive paywall rejections?
@@ -334,14 +335,3 @@ If you keep getting rejected for deceptive paywall:
    - Screenshot of your paywall
    - Your rejection notice in full
    - Whether you're using custom or RevenueCat paywall
-
----
-
-## Related documentation
-
-- [RevenueCat Paywalls](https://setup.despia.com/lovable/native-features/paywalls)
-- [Restore Purchases](https://setup.despia.com/lovable/native-features/restore-purchase)
-- [In-App Purchase Rejections](https://setup.despia.com/roadblocks/app-review/in-app-purchases)
-- [RevenueCat Webhooks Template](https://setup.despia.com/best-practices/backend/revenue-cat/webhooks)
-- [Apple Subscription Guidelines](https://developer.apple.com/app-store/subscriptions/)
-- [Google Play Billing Policy](https://support.google.com/googleplay/android-developer/answer/140504)
