--- a/store-rejections/common-rejection/in-app-purchases.mdx
+++ b/store-rejections/common-rejection/in-app-purchases.mdx
@@ -1,6 +1,7 @@
 ---
 title: "In-App Purchases"
 description: "Your app was rejected for issues with in-app purchases. Here's what went wrong and how to fix it."
+icon: "align-left"
 ---
 
 ## What are IAP rejections?
@@ -373,15 +374,3 @@ If you keep getting rejected:
    - Screenshot of your paywall
    - RevenueCat product configuration
    - Whether sandbox testing works
-
----
-
-## Related documentation
-
-- [RevenueCat Paywalls](https://setup.despia.com/lovable/native-features/paywalls)
-- [Restore Purchases](https://setup.despia.com/lovable/native-features/restore-purchase)
-- [User Agent Detection](https://setup.despia.com/lovable/native-features/user-agent)
-- [RevenueCat Webhooks Template](https://setup.despia.com/best-practices/backend/revenue-cat/webhooks)
-- [RevenueCat Cron Jobs Template](https://setup.despia.com/best-practices/backend/revenue-cat/cron-jobs)
-- [App Store Review Guidelines - In-App Purchase](https://developer.apple.com/app-store/review/guidelines/#in-app-purchase)
-- [Google Play Billing](https://developer.android.com/google/play/billing)
