--- a/store-rejections/common-rejection/minimum-functionality.mdx
+++ b/store-rejections/common-rejection/minimum-functionality.mdx
@@ -1,6 +1,7 @@
 ---
-title: "Minimun Functionality"
+title: "Minimum Functionality"
 description: "Your app was rejected for not meeting minimum functionality requirements. Here's what that means and how to fix it."
+icon: "align-left"
 ---
 
 ## What is minimum functionality?
@@ -542,15 +543,3 @@ If you keep getting rejected:
    - Current app URL
    - List of native features implemented
    - How your app differs from your website
-
-## Related documentation
-
-- [Introduction](https://setup.despia.com/introduction)
-- [Empty Pages Troubleshooting](https://setup.despia.com/roadblocks/runtime/empty-pages)
-- [Localhost Server](https://setup.despia.com/local-server/how-it-works)
-- [Safe Areas](https://setup.despia.com/lovable/native-features/safe-areas)
-- [OneSignal Push](https://setup.despia.com/lovable/native-features/onesignal)
-- [Storage Vault](https://setup.despia.com/lovable/native-features/storage-vault)
-- [RevenueCat Paywalls](https://setup.despia.com/lovable/native-features/paywalls)
-- [Google Auth](https://setup.despia.com/lovable/native-features/oauth/google)
-- [Deeplinking](https://setup.despia.com/lovable/native-features/deeplinking)
