--- a/store-rejections/common-rejection/non-mobile-design.mdx
+++ b/store-rejections/common-rejection/non-mobile-design.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Non-Mobile Design"
 description: "Your app was rejected because it looks like a website instead of a native mobile app. Here's how to fix it."
+icon: "align-left"
 ---
 
 ## What is non-mobile design?
@@ -436,11 +437,3 @@ If you keep getting rejected for design issues:
    - Screenshots of your current layout
    - Your rejection notice
    - Description of navigation patterns you're using
-
----
-
-## Related documentation
-
-- [Introduction](https://setup.despia.com/introduction)
-- [Safe Areas](https://setup.despia.com/lovable/native-features/safe-areas)
-- [User Agent Detection](https://setup.despia.com/lovable/native-features/user-agent)
