--- a/store-rejections/common-rejection/privacy-policy.mdx
+++ b/store-rejections/common-rejection/privacy-policy.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Privacy Policy"
 description: "Your app was rejected because of a missing or inadequate privacy policy. Here's what's required and how to fix it."
+icon: "align-left"
 ---
 
 ## What are privacy policy rejections?
@@ -198,7 +199,7 @@ If your app supports account creation, users must be able to delete their accoun
 
 **What to include in privacy policy:**
 
-> "You can delete your account and all associated data at any time from Settings \> Account \> Delete Account. Alternatively, email privacy@yourapp.com to request deletion. We will process deletion requests within 30 days."
+> "You can delete your account and all associated data at any time from Settings \> Account \> Delete Account. Alternatively, email [privacy@yourapp.com](mailto:privacy@yourapp.com) to request deletion. We will process deletion requests within 30 days."
 
 If you don't offer account creation, you don't need this. But if you do, account deletion is mandatory.
 
@@ -303,14 +304,3 @@ If you keep getting rejected for privacy policy issues:
    - Your rejection notice in full
    - List of SDKs your app uses
    - Screenshot of your App Store privacy labels
-
----
-
-## Related documentation
-
-- [App Privacy Details](https://setup.despia.com/lovable/native-features/app-privacy)
-- [OneSignal Push Notifications](https://setup.despia.com/lovable/native-features/onesignal)
-- [Storage Vault](https://setup.despia.com/lovable/native-features/storage-vault)
-- [Google Auth](https://setup.despia.com/lovable/native-features/oauth/google)
-- [Apple App Store Review Guidelines](https://developer.apple.com/app-store/review/guidelines/#privacy)
-- [Google Play Data Safety](https://support.google.com/googleplay/android-developer/answer/10787469)
