--- a/store-rejections/common-rejection/social-login-options.mdx
+++ b/store-rejections/common-rejection/social-login-options.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Social Login Options"
 description: "Your app was rejected because it offers social login without including the platform's native option. Here's how to fix it."
+icon: "align-left"
 ---
 
 ## What are social login rejections?
@@ -365,14 +366,3 @@ If you keep getting rejected for login issues:
    - Your rejection notice in full
    - Screenshot of your login screen
    - List of authentication methods your app uses
-
----
-
-## Related documentation
-
-- [Google Auth](https://setup.despia.com/lovable/native-features/oauth/google)
-- [TikTok Auth](https://setup.despia.com/lovable/native-features/oauth/tiktok)
-- [Storage Vault](https://setup.despia.com/lovable/native-features/storage-vault)
-- [User Agent Detection](https://setup.despia.com/lovable/native-features/user-agent)
-- [Apple Sign in with Apple Guidelines](https://developer.apple.com/sign-in-with-apple/get-started/)
-- [Apple Review Guideline 4.8](https://developer.apple.com/app-store/review/guidelines/#sign-in-with-apple)
