--- a/store-rejections/common-rejection/spam-and-copies.mdx
+++ b/store-rejections/common-rejection/spam-and-copies.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Spam and Copies"
 description: "Your app was rejected because it's too similar to existing apps. Here's how to differentiate and get approved."
+icon: "align-left"
 ---
 
 ## What are spam and copycat rejections?
@@ -251,10 +252,3 @@ If you keep getting rejected for spam/copycat:
    - Your App Store screenshots
    - Description of what makes your app different
    - Who your specific target audience is
-
----
-
-## Related documentation
-
-- [Apple App Store Review Guidelines 4.3](https://developer.apple.com/app-store/review/guidelines/#spam)
-- [Google Play Spam Policy](https://support.google.com/googleplay/android-developer/answer/10281362)
