--- a/store-rejections/common-rejection/user-specific-data.mdx
+++ b/store-rejections/common-rejection/user-specific-data.mdx
@@ -1,6 +1,7 @@
 ---
 title: "User-Specific Data"
 description: "Your app was rejected because it collects personal data that isn't necessary for its functionality. Here's how to fix it."
+icon: "align-left"
 ---
 
 ## What are user-specific data rejections?
@@ -282,13 +283,3 @@ If you keep getting rejected for data collection:
    - List of data fields you collect
    - Explanation of why each field is needed
    - Screenshot of your signup/profile flow
-
----
-
-## Related documentation
-
-- [Privacy Policy Rejections](https://setup.despia.com/roadblocks/app-review/privacy-policy)
-- [Tracking Transparency Rejections](https://setup.despia.com/roadblocks/app-review/tracking-transparency)
-- [App Privacy Details](https://setup.despia.com/lovable/native-features/app-privacy)
-- [Apple Data Collection Guidelines](https://developer.apple.com/app-store/review/guidelines/#data-collection-and-storage)
-- [Google User Data Policy](https://support.google.com/googleplay/android-developer/answer/10144311)
