--- a/store-rejections/introduction.mdx
+++ b/store-rejections/introduction.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Introduction"
 description: "Your app got rejected. Take a breath. This is normal, fixable, and part of shipping apps."
+icon: "hand-horns"
 ---
 
 ## Rejections are part of the game
@@ -84,34 +85,34 @@ We've compiled guides for the most common rejection reasons. Each guide explains
 
 ### Functionality and design
 
-| Guide                                                                                         | Platforms    | What it covers                                              |
-| :-------------------------------------------------------------------------------------------- | :----------- | :---------------------------------------------------------- |
-| [Minimum Functionality](https://setup.despia.com/roadblocks/app-review/minimum-functionality) | iOS, Android | App is too simple, limited features, single webpage wrapper |
-| [Non-Mobile Design](https://setup.despia.com/roadblocks/app-review/non-mobile-design)         | iOS, Android | App looks like a website, not optimized for touch/mobile    |
-| [Spam and Copies](https://setup.despia.com/roadblocks/app-review/spam-and-copies)             | iOS, Android | App is too similar to existing apps, no differentiation     |
+| Guide                                                                                                     | Platforms    | What it covers                                              |
+| :-------------------------------------------------------------------------------------------------------- | :----------- | :---------------------------------------------------------- |
+| [Minimum Functionality](https://setup.despia.com/store-rejections/common-rejection/minimum-functionality) | iOS, Android | App is too simple, limited features, single webpage wrapper |
+| [Non-Mobile Design](https://setup.despia.com/store-rejections/common-rejection/non-mobile-design)         | iOS, Android | App looks like a website, not optimized for touch/mobile    |
+| [Spam and Copies](https://setup.despia.com/store-rejections/common-rejection/spam-and-copies)             | iOS, Android | App is too similar to existing apps, no differentiation     |
 
 ### Payments and monetization
 
-| Guide                                                                                   | Platforms    | What it covers                                      |
-| :-------------------------------------------------------------------------------------- | :----------- | :-------------------------------------------------- |
-| [In-App Purchases](https://setup.despia.com/roadblocks/app-review/in-app-purchases)     | iOS, Android | Digital goods must use Apple/Google IAP, not Stripe |
-| [Deceptive Paywalls](https://setup.despia.com/roadblocks/app-review/deceptive-paywalls) | iOS, Android | Subscription UI is misleading, pricing not clear    |
+| Guide                                                                                               | Platforms    | What it covers                                      |
+| :-------------------------------------------------------------------------------------------------- | :----------- | :-------------------------------------------------- |
+| [In-App Purchases](https://setup.despia.com/store-rejections/common-rejection/in-app-purchases)     | iOS, Android | Digital goods must use Apple/Google IAP, not Stripe |
+| [Deceptive Paywalls](https://setup.despia.com/store-rejections/common-rejection/deceptive-paywalls) | iOS, Android | Subscription UI is misleading, pricing not clear    |
 
 ### Privacy and data
 
-| Guide                                                                                         | Platforms    | What it covers                       |
-| :-------------------------------------------------------------------------------------------- | :----------- | :----------------------------------- |
-| [Privacy Policy](https://setup.despia.com/roadblocks/app-review/privacy-policy)               | iOS, Android | Missing or inadequate privacy policy |
-| [Tracking Transparency](https://setup.despia.com/roadblocks/app-review/tracking-transparency) | iOS          | ATT prompt required before tracking  |
-| [AI Processing Consent](https://setup.despia.com/roadblocks/app-review/ai-processing-consent) | iOS, Android | User data sent to AI without consent |
-| [User-Specific Data](https://setup.despia.com/roadblocks/app-review/user-specific-data)       | iOS, Android | Collecting data you don't need       |
+| Guide                                                                                                     | Platforms    | What it covers                       |
+| :-------------------------------------------------------------------------------------------------------- | :----------- | :----------------------------------- |
+| [Privacy Policy](https://setup.despia.com/store-rejections/common-rejection/privacy-policy)               | iOS, Android | Missing or inadequate privacy policy |
+| [Tracking Transparency](https://setup.despia.com/store-rejections/common-rejection/tracking-transparency) | iOS          | ATT prompt required before tracking  |
+| [AI Processing Consent](https://setup.despia.com/store-rejections/common-rejection/ai-processing)         | iOS, Android | User data sent to AI without consent |
+| [User-Specific Data](https://setup.despia.com/store-rejections/common-rejection/user-specific-data)       | iOS, Android | Collecting data you don't need       |
 
 ### Authentication
 
-| Guide                                                                                           | Platforms               | What it covers                                       |
-| :---------------------------------------------------------------------------------------------- | :---------------------- | :--------------------------------------------------- |
-| [Social Login](https://setup.despia.com/roadblocks/app-review/social-login)                     | iOS (required), Android | Third-party login requires Sign in with Apple on iOS |
-| [Blank Screen Redirects](https://setup.despia.com/roadblocks/app-review/blank-screen-redirects) | iOS, Android            | White/blank screens during OAuth flow                |
+| Guide                                                                                                       | Platforms               | What it covers                                       |
+| :---------------------------------------------------------------------------------------------------------- | :---------------------- | :--------------------------------------------------- |
+| [Social Login](https://setup.despia.com/store-rejections/common-rejection/social-login-options)             | iOS (required), Android | Third-party login requires Sign in with Apple on iOS |
+| [Blank Screen Redirects](https://setup.despia.com/store-rejections/common-rejection/blank-screen-redirects) | iOS, Android            | White/blank screens during OAuth flow                |
 
 ## Tips for faster approvals
 
@@ -139,8 +140,8 @@ Fix the issue. Resubmit. Keep building.
 
 ---
 
-## Related documentation
+## Related links
 
 - [Apple App Store Review Guidelines](https://developer.apple.com/app-store/review/guidelines/)
 - [Google Play Policy Center](https://play.google.com/about/developer-content-policy/)
-- [Despia Native Features](https://setup.despia.com/lovable/native-features)
+- [Despia Native Features](https://setup.despia.com)
