Documentation edits made through Mintlify web editor

--- a/best-practices/backend/one-signal/user-lifecycle.mdx
+++ b/best-practices/backend/one-signal/user-lifecycle.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Lifecycle"
+title: "User Lifecycle"
 description: "Complete implementation guide for OneSignal push notifications with a unified "app_user_id" that works across your database, RevenueCat, and OneSignal."
 ---
 
