Documentation edits made through Mintlify web editor

--- a/best-practices/backend/one-signal/user-session.mdx
+++ b/best-practices/backend/one-signal/user-session.mdx
@@ -1,6 +1,7 @@
 ---
 title: "User Session"
 description: "Complete implementation guide for OneSignal push notifications with a unified app_user_id that works across your database, RevenueCat, and OneSignal."
+icon: "user-large"
 ---
 
 ## The Universal User Index
